<resources>
    <string name="app_name">Tata Cara Shalat</string>
    <string name="niat_subuh">Niat Shalat Shubuh</string>
    <string name="arab_niat_subuh">اُصَلّى فَرْضَ الصُّبْحِ رَكْعَتَيْنِ مُسْتَقْبِلَ الْقِبْلَةِ اَدَاءً مَأْمُوْمًا ِللهِ تَعَالَى</string>
    <string name="latin_niat_subuh">
USHOLLII FARDHOSH SHUBHI ROKATAINI MUSTAQBILAL QIBLATI ADAA-AN MAMUUMAN LILLAAHI TAAALA.</string>
    <string name="arti_niat_subuh">Aku berniat shalat fardu Shubuh dua rakaat menghadap kiblat sebagai mamum/imam karena Allah Taala.</string>
    <string name="niat_dzuhur">Niat Shalat Dzuhur</string>
    <string name="arab_niat_dzuhur">اُصَلّى فَرْضَ الظُّهْرِاَرْبَعَ رَكَعَاتٍ مُسْتَقْبِلَ الْقِبْلَةِ اَدَاءً مَأْمُوْمًا ِللهِ تَعَالَى
</string>
    <string name="latin_niat_dzuhur">USHOLLII FARDHODL DHUHRI ARBAA RAKAAATIM MUSTAQBILAL QIBLATI ADAA-AN MAMUUMAN LILLAAHI TAAALA.</string>
    <string name="arti_niat_dzuhur">Aku berniat shalat fardu Dhuhur empat rakaat menghadap kiblat sebagai mamum karena Allah Taalaa.</string>
    <string name="niat_ashar">Niat Shalat Ashar</string>
    <string name="arab_niat_ashar">اُصَلّى فَرْضَ الْعَصْرِاَرْبَعَ رَكَعَاتٍ مُسْتَقْبِلَ الْقِبْلَةِ اَدَاءً مَأْمُوْمًا ِللهِ تَعَالَى
</string>
    <string name="latin_niat_ashar">USHOLLII FARDHOL ASHRI ARBAA RAKA AATIM MUSTAQBILAL QIBLATI ADAA-AN MA MUUMAN LILLAAHI TA AALA.</string>
    <string name="arti_niat_ashar">Aku berniat shalat fardu Ashar empat rakaat menghadap kiblat sebagai ma mum karena Allah Ta ala.</string>
    <string name="niat_maghrib">Niat Shalat Maghrib</string>
    <string name="arab_niat_maghrib">اُصَلّى فَرْضَ الْمَغْرِبِ ثَلاَثَ رَكَعَاتٍ مُسْتَقْبِلَ الْقِبْلَةِ اَدَاءً مَأْمُوْمًا ِللهِ تَعَالَى
</string>
    <string name="latin_niat_maghrib">USHOLLII FARDHOL MAGHRIBI TSALAATSA RAKA AATIM MUSTAQBILAL QIBLATI ADAA-AN MA MUUMAN LILLAAHI TA AALA.</string>
    <string name="arti_niat_maghrib">Aku berniat shalat fardu Maghrib tiga rakaat menghadap kiblat sebagai ma mum karena Allah Ta ala.</string>
    <string name="niat_isya">Niat Shalat Isya</string>
    <string name="arab_niat_isya">اُصَلّى فَرْضَ الْعِشَاءِ اَرْبَعَ رَكَعَاتٍ مُسْتَقْبِلَ الْقِبْلَةِ اَدَاءً مَأْمُوْمًا ِللهِ تَعَالَى
</string>
    <string name="latin_niat_isya">USHOLLII FARDHOL ISYAA I ARBA A RAKA AATIM MUSTAQBILAL QIBLATI ADAA-AN MA MUUMAN LILLAAHI TA AALA.</string>
    <string name="arti_niat_isya">Aku berniat shalat fardu Isya empat rakaat menghadap kiblat sebagai ma mum karena Allah Ta ala.</string>
    <string name="takbir">Takbiratul Ihram</string>
    <string name="arab_takbir">اللَّهُ أَكْبَرُ</string>
    <string name="latin_takbir">Allahu akbar</string>
    <string name="arti_takbir">Allah Maha Besar</string>
    <string name="iftitah">Membaca Doa Iftitah</string>
    <string name="arab_iftitah">اللهُ أَكْبَرُ كَبِيرًا، وَالْحَمْدُ لِلَّهِ كَثِيرًا، وَسُبْحَانَ اللهِ بُكْرَةً وَأَصِيلً
    وَجَّهْتُ وَجْهِيَ لِلَّذِيْ فَطَرَ السَّمَوَاتِ وَالْأَرْضَ حَنِيْفاً مُسْلِماً وَمَا أَنَا مِنَ الْمُشْرِكِيْنَ. إِنَّ صَلَاتِيْ وَنُسُكِيْ وَمَحْيَايَ وَمَمَاتِيْ لِلَّهِ رَبِّ الْعَالَمِيْنَ لَا شَرِيْكَ لَهُ وَبِذَلِكَ أُمِرْتُ وَأَنَا مِنَ الْمُسْلِمِيْنَ   </string>
    <string name="latin_iftitah">Allaahu Akbaru kabiiraw-walhamdu lillaahi katsiiran, wa subhaanallaahi bukrataw-wa’ashiila.
        Inni Wajjahtu wajhiya lilladzii fatharas-samaawaati wal ardha haniifam-muslimaw-wamaa anaa minal musyrikiina. Inna shalaatii wa nusukii wa mahyaaya wa mamaatii lillaahi Rabbil ‘aalamiina. Laa syariikalahu wa bidzaalika umirtu wa anaa minal muslimiin.</string>
    <string name="arti_iftitah">Inni Wajjahtu wajhiya lilladzii fatharas-samaawaati wal ardha haniifam-muslimaw-wamaa anaa minal musyrikiina. Inna shalaatii wa nusukii wa mahyaaya wa mamaatii lillaahi Rabbil ‘aalamiina. Laa syariikalahu wa bidzaalika umirtu wa anaa minal muslimiin.
        Kuhadapkan Wajahku Kepada Zat Yang Telah Menciptakan Langit Dan Bumi Dengan Penuh Ketulusan Dan Kepasrahan Dan Aku Bukanlah Termasuk Orang-Orang Yang Musyrik. Sesungguhnya Sahalatku, Ibadahku, Hidupku Dan Matiku Semuanya Untuk Allah, Penguasa Alam Semesta. Tidak Ada Sekutu Bagi-Nya Dan Dengan Demikianlah Aku Diperintahkan Dan Aku Termasuk Orang-Orang Islam.</string>
    <string name="alfatihah">Membaca Surat Al-Fatihah</string>
    <string name="arab_alfatihah">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ (١)\n لْحَمْدُ لِلّٰهِ رَبِّ الْعٰلَمِيْنَۙ (٢)\n\t الرَّحْمٰنِ الرَّحِيْم ِۙ(٣)\n مٰلِكِ يَوْمِ الدِّيْنِۗ (٤)\n اِيَّاكَ نَعْبُدُ وَاِيَّاكَ نَسْتَعِيْنُۗ (٥)\n اِهْدِنَا الصِّرَاطَ الْمُسْتَقِيْمَ  ۙ(٦)\n صِرَاطَ الَّذِيْنَ اَنْعَمْتَ عَلَيْهِمْ ەۙ غَيْرِ الْمَغْضُوْبِ عَلَيْهِمْ وَلَا الضَّاۤلِّيْنَ (٧)\n</string>
    <string name="latin_alfatihah">(١) bismillāhir-raḥmānir-raḥīm
        \n(٢) al-ḥamdu lillāhi rabbil-ālamīn
        \n(٣) ar-raḥmānir-raḥīm
        \n(٤) māliki yaumid-dīn
        \n(٥) iyyāka na budu wa iyyāka nasta īn
        \n(٦) ihdinaṣ-ṣirāṭal-mustaqīm
        \n(٧) ṣirāṭallażīna an amta alaihim gairil-magḍụbi alaihim wa laḍ-ḍāllīn </string>
    <string name="arti_alfatihah">1. Dengan nama Allah Yang Maha Pengasih, Maha Penyayang.
    \n2. Segala puji bagi Allah, Tuhan seluruh alam,
    \n3. Yang Maha Pengasih, Maha Penyayang,
    \n4. Pemilik hari pembalasan.
    \n5. Hanya kepada Engkaulah kami menyembah dan hanya kepada Engkaulah kami mohon pertolongan.
    \n6. Tunjukilah kami jalan yang lurus,
    \n7. (yaitu) jalan orang-orang yang telah Engkau beri nikmat kepadanya; bukan (jalan) mereka yang dimurkai, dan bukan (pula jalan) mereka yang sesat.</string>
    <string name="suratquran">Membaca Surat Al-Quran</string>
    <string name="arab_suratquran">Bacaan Surat Pendek Seperti : An-Nas, Al-Falaq, Al-Ikhlas, Al-Kautsar dan lain-lain.</string>
    <string name="latin_suratquran">   </string>
    <string name="arti_suratquran">  </string>
    <string name="rukuk">Rukuk</string>
    <string name="arab_rukuk">سُبْحَانَ رَبِّيَ اْلعَظِيْمِ وَبِحَمْدِه</string>
    <string name="latin_rukuk">Subhaana rabbiyal-adhiimii wa bi hamdih. 3X</string>
    <string name="arti_ruku">Maha Suci Tuhan Yang Maha Agung serta memujilah aku kepada-Nya</string>
    <string name="itidal">Itidal</string>
    <string name="arab_itidal">سَمِعَ اللهُ لِمَنْ حَمِدَه</string>
    <string name="latin_itidal">Samiallaahu li man hamidah</string>
    <string name="arti_itidal">Allah mendengar orang yang memuji-Nya</string>
    <string name="qunut">Qunut</string>
    <string name="arab_qunut">اَللّهُمَّ اهْدِنِىْ فِيْمَنْ هَدَيْتَ ,وَ عَافِنِى فِيْمَنْ عَافَيْتَ ,وَتَوَلَّنِىْ فِيْمَنْ تَوَلَّيْتَn\

وَبَارِكْ لِىْ فِيْمَا اَعْطَيْتَ ,وَقِنِيْ شَرَّمَا قََضَيْتَ ،فَاِ نَّكَ تَقْضِىْ وَلاَ يُقْضَى عَلَيْكَn\

وَاِ نَّهُ لاَ يَذِلُّ مَنْ وَالَيْتَ ,وَلاَ يَعِزُّ مَنْ عَادَيْتَn\

تَبَارَكْتَ رَبَّنَا وَتَعَالَيْتَ ,فَلَكَ الْحَمْدُ عَلَى مَا قَضَيْتَn\

وَاَسْتَغْفِرُكَ وَاَتُوْبُ اِلَيْكَn\

وَصَلَّى اللهُ عَلَى سَيِّدَنَا مُحَمَّدٍ النَّبِيِّ اْلاُمِّيِّ وَعَلَى آلِهِ وَصَحْبِهِ وَسَلَّمَn\</string>
    <string name="latin_qunut">“Allahummah dinii fii man hadait.
\nWa’aafinii fii man ‘aafaiit.
\nWa tawallanii fii man tawallaiit.
\nWa baarik lii fiimaa a’thaiit.
\nWa qinii syarramaa qadthaiit.
\nFa innaka taqdthii walaa yuqthdaa ‘alaiik.
\nWa innahu laa yadzillu man wãlaiit.
\nWalaa ya’izzu man ‘aadaiit.
\nTabaa rakta rabbanaa wata ’aalait
\nFa lakal-hamdu ‘alaa maa qadhaiit
\nAstaghfiruka wa atuubu ilaiik,
\nwa shallallaahu ‘alaa sayyidina Muhammadinin-nabiyyil ummiyyi wa’alaa aalihii wa shahbihii wa sallam.”</string>
    <string name="arti_qunut">Ya Allah tunjukkanlah saya sebagaimana mereka yang sudah Engkau berikan petunjuk.

\nDan kasihkanlah kesehatan kepadaku sebagaimana mereka yang Engkau sudah kasih kesehatan.

\nDan peliharalah aku sebagaimana orang yang telah Engkau pelihara.

\nDan berilah keberkahan bagiku pada segala apa yang Engkau sudah karuniakan.

\nDan lindungi aku dari segala bahaya kejahatan yang Engkau sudah pastikan.

\nMaka sesungguhnya Engkaulah yang menghukum dan bukan kena hukum.

\nMaka sesungguhnya tidak hina orang yang Engkau pimpin.

\nDan tidak mulia orang yang mana Engkau memusuhinya.

\nMaha Suci Engkau wahai Tuhan kami dan Maha tinggi Engkau

\nMaha bagi Engkau seluruh pujian di atas yang Engkau hukumkan

\nAku memohon ampun dari Engkau dan aku bertaubat kepada Engkau

\n(Dan semoga Allah) mencurahkan rahmat dan sejahtera ke atas junjungan kami Nabi kami Muhammad, keluarga dan sahabatnya.</string>
    <string name="sujud">Sujud</string>
    <string name="arab_sujud">سُبْحَانَ رَبِّيَ اْلاَعْلَى وَبِحَمْدِهِ</string>
    <string name="latin_sujud">Subhaana rabbiyal-a laa wa bi hamdih. 3X</string>
    <string name="arti_sujud">Maha Suci Tuhan Yang Maha Tinggi serta memujilah aku kepada-Nya.</string>
    <string name="dudukdiantara">Duduk Di Antara Dua Sujud</string>
    <string name="arab_dudukdiantara">رَبِّ اغْفِرْلِى وَارْحَمْنِىْ وَاجْبُرْنِىْ وَارْفَعْنِى وَارْزُقْنِىْ وَاهْدِ نِىْ وَعَا فِنِىْ وَاعْفُ عَنِّىْ</string>
    <string name="latin_dudukdiantara">Rabbighfirlii warhamnii wajburnii warfanii warzuqnii wahdinii wa aafinii wafu annii.</string>
    <string name="arti_dudukdiantara">Ya Allah, ampunilah dosaku, belas kasihanilah aku dan cukupkanlah segala kekuranganku dan angkatlah derajatku dan berilah rezeki kepadaku, dan berilah aku petunjuk da berilah kesehatan kepadaku dan berilah ampunan kepadaku</string>
    <string name="tasyahudawal">Tasyahud Awal</string>
    <string name="arab_tasyahudawal">اللهُ وَأَشْهَدُ أَنَّ مُحَمَّدًارَسُوْلُ اللَّهِ اَللَّهُمَّ صَلِّ عَلَ سَيِّدِ نَامُحَمَّدٍ, آلتَّحِيَّاتُ اْلمُبَارَكَاتُ الصَّلَوَاتُالطَّيِّبَاتُ لِلَّهِ اَلسَّلاَمُ عَلَيْكَ أَيُّهَا النَّبِيُّ وَرَحْمَةُ اللهِ وَبَرَكَاتُهُ اَلسَّلاَمُ عَلَيْنَا وَعَلَى عِبَادِ اللهِ الصَّالِحِيْنَ أَشْهَدُ أَنْ لاَ إِلَـهَ إِلاَ</string>
    <string name="latin_tasyahudawal">At-tahiyyatuul-mubaarakaatush-shalawaatuth-thayyibaatu lillaah. As-salaamu alaika ayyuhan-nabiyyu wa rahmatullaahi wa barakaatuh, as-salaamu alainaa wa alaa ibaadillaahish-shaalihiin. Asyhadu an laa ilaaha illallaah, wa ayhadu anna Muhammadar Rasulullaah. Allahumma shalli alaa sayyidinaa Muhammad.</string>
    <string name="arti_tasyahudawal">Segala kehormatan, keberkahan, kebahagiaan dan kebaikan bagi Allah. Salam, rahmat dan berkah-Nya kupanjatkan kepadamu wahai Nabi (Muhammad). Salam (keselamatan) semoga tetap untuk kami seluruh hamba yang shaleh-shaleh. Aku bersaksi bahwa tiada Tuhan melainkan Allah. Dan aku bersaksi bahwa Nabi Muhammad adalah utusan Allah. Ya Allah! Limpahilah rahmat kepada Nabi Muhammad.</string>
    <string name="tasyahudakhir">Tasyahud Akhir (Tambahkan bacaan Tasyahud Awal sebelum masuk ke bacaan Tasyahud Akhir)</string>
    <string name="arab_tasyahudakhir">سعَلَى آلِ سَيِّدِ نَاإِبْرَاهِيْمَ فى اْلعَالَمِيْنَ إِنَّكَ حَمِيْدٌ مَجِيْدٌ, كَمَا صَلَّيْتَ عَلَى سيِدِ نَآ إبْرَاهِيْمَ وَعَلَى آلِ سَّيِدِ نَآ إِبْرَاهِيْمَ وَ بَارِِكْ عَلَى سيِّدِ نَا مُحَمَّدٍ وَعَلَى آلِ سيِّدِ نَا مُحَمَّدٍ كَمَا بَارَكْتَ عَلَى سيِّدِ نَا إبْرَاهِيَْمَ وَ , وَعَلَى آلِ سَيِّدِ نَامُحَمَّدٍ</string>
    <string name="latin_tasyahudakhir"> Wa alaa aali sayyidinaa Muhammad, Kamaa shallaita alaa sayyidinaa Ibrahiim wa alaa aali sayyidinaa Ibrahiim wa baarik alaa sayyidinaa Muhammad wa alaa aali sayyidinaa Muhammad. Kamaa baarakta alaa sayyidinaa Ibrahiim wa alaa aali sayyidinaa Ibrahiim fil-aalamiina innaka hamiidum majiid.</string>
    <string name="jadwal_shalat">JADWAL SHALAT</string>
    <string name="lokasi">Masukan Lokasi Anda</string>
    <string name="cari">Cari</string>
    <string name="lokasi_anda">Lokasi</string>
    <string name="space" />
</resources>