<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_02"
    tools:context="org.d3ifcool.tatacarashalat.JadwalShalat.JadwalShalatActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jadwal_shalat"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/searchet"
                android:hint="@string/lokasi"
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/searchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:hint="@string/cari"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:gravity="center"
                android:text="@string/lokasi_anda"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:gravity="center"
                android:id="@+id/location"
                android:text="@string/space"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:gravity="center"
                android:text="Tanggal"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:gravity="center"
                android:id="@+id/date"
                android:text="@string/space"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>





        <LinearLayout
            android:background="#EEEEEF"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="Shalat Shubuh"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/fjar"
                android:text="@string/space"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="20sp"
                android:text="Shalat Dzuhur"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/dzuhur"
                android:text="@string/space"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:background="#EEEEEF"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="Shalat Ashar"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/ashar"
                android:text="@string/space"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Shalat Maghrib"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/maqrib"
                android:text="@string/space"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:layout_height="wrap_content"/>
        </LinearLayout>


        <LinearLayout
            android:background="#EEEEEF"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="Shalat Isya"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/isya"
                android:text="@string/space"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="CATATAN : WAKTU AKAN TERSEDIA DALAM FORMAT AM/PM."
                android:textSize="13sp"
                android:textStyle="bold|italic" />
        </LinearLayout>
    </LinearLayout>


</ScrollView>
